--- a/Cerdo.html
+++ b/Cerdo.html
@@ -55,8 +55,8 @@
 <div class="container my-4">
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
-            <div class="card" style="width: 100%;">
-                <img src="./Imagenes/pienso%20cerdo%205.png" alt="">
+            <div class="card" style="width:100%;">
+                <img src="./Imagenes/pienso%20cerdo%205.png" alt="pienso">
                 <div class="card-body">
                     <h5 class="card-title">Piensos de inicio</h5>
                     <details>
@@ -70,7 +70,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/pienso%20cerdo.png" class="card-img-top" alt="">
+                <img src="./Imagenes/pienso%20cerdo.png" class="card-img-top" alt="pienso">
                 <div class="card-body">
                     <h5 class="card-title">Piensos de crecimiento</h5>
                     <details>
@@ -84,7 +84,7 @@
         </div>
     <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/piensos%20cerdo%20engorde.png" class="card-img-top" alt="">
+                <img src="./Imagenes/piensos%20cerdo%20engorde.png" class="card-img-top" alt="pienso">
                 <div class="card-body">
                     <h5 class="card-title">Piensos de engorde</h5>
                     <details>
@@ -98,7 +98,7 @@
         </div>
      <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/Pinso%20cerdo%201.png" class="card-img-top" alt="">
+                <img src="./Imagenes/Pinso%20cerdo%201.png" class="card-img-top" alt="pienso">
                 <div class="card-body">
                     <h5 class="card-title">Piensos para madres lactantes</h5>
                     <details>
@@ -112,7 +112,7 @@
         </div>
       <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/piensos%204.png" class="card-img-top" alt="">
+                <img src="./Imagenes/piensos%204.png" class="card-img-top" alt="pienso">
                 <div class="card-body">
                     <h5 class="card-title">Piensos para madres gestantes</h5>
                     <details>
@@ -126,7 +126,7 @@
         </div>
      <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/comedero%20de%20engorde.png" class="card-img-top" alt="">
+                <img src="./Imagenes/comedero%20de%20engorde.png" class="card-img-top" alt="comedero">
                 <div class="card-body">
                     <h5 class="card-title">Comedero de engorde</h5>
                     <details>
@@ -140,7 +140,7 @@
         </div>
      <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/crotales.png" class="card-img-top" alt="">
+                <img src="./Imagenes/crotales.png" class="card-img-top" alt="crotal">
                 <div class="card-body">
                     <h5 class="card-title">Crotales</h5>
                     <details>
@@ -154,7 +154,7 @@
         </div>
     <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/bebederos%20cerdos.png" class="card-img-top" alt="">
+                <img src="./Imagenes/bebederos%20cerdos.png" class="card-img-top" alt="bebedero">
                 <div class="card-body">
                     <h5 class="card-title">Bebedero</h5>
                     <details>
@@ -168,7 +168,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/bascula.png" class="card-img-top" alt="">
+                <img src="./Imagenes/bascula.png" class="card-img-top" alt="bascula">
                 <div class="card-body">
                     <h5 class="card-title">Bascula</h5>
                     <details>
