--- a/cabra.html
+++ b/cabra.html
@@ -58,17 +58,17 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./Imagenes/animal.jpg" class="d-block w-100" alt="...">
+      <img src="./Imagenes/animal.jpg" class="d-block w-100" alt="cabra">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./Imagenes/animal1.jpg" class="d-block w-100" alt="...">
+      <img src="./Imagenes/animal1.jpg" class="d-block w-100" alt="cabra">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./Imagenes/Cabras%20Pigmeass.jpg" class="d-block w-100" alt="...">
+      <img src="./Imagenes/Cabras%20Pigmeass.jpg" class="d-block w-100" alt="cabra">
       <div class="carousel-caption d-none d-md-block">
       </div>
     </div>
@@ -89,7 +89,7 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/piensos%20cabra6.png" class="card-img-top" alt="">
+                <img src="./Imagenes/piensos%20cabra6.png" class="card-img-top" alt="pienso">
                 <div class="card-body">
                     <h5 class="card-title">Piensos de crecimiento</h5>
                     <details>
@@ -103,7 +103,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/piensos%20cabra%203.png" class="card-img-top" alt="">
+                <img src="./Imagenes/piensos%20cabra%203.png" class="card-img-top" alt="pienso">
                 <div class="card-body">
                     <h5 class="card-title">Piensos de engorde</h5>
                     <details>
@@ -117,7 +117,7 @@
         </div>
     <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/piensos%20cabra%202.png" class="card-img-top" alt="">
+                <img src="./Imagenes/piensos%20cabra%202.png" class="card-img-top" alt="pienso">
                 <div class="card-body">
                     <h5 class="card-title">Piensos de produccion de leche</h5>
                     <details>
@@ -131,7 +131,7 @@
         </div>
      <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/piensos%20cabra%201.png" class="card-img-top" alt="">
+                <img src="./Imagenes/piensos%20cabra%201.png" class="card-img-top" alt="pienso">
                 <div class="card-body">
                     <h5 class="card-title">Piensos de mantenimiento</h5>
                     <details>
@@ -146,7 +146,7 @@
         </div>
       <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/bebedero%20cabra.png" class="card-img-top" alt="">
+                <img src="./Imagenes/bebedero%20cabra.png" class="card-img-top" alt="bebedero">
                 <div class="card-body">
                     <h5 class="card-title">Bebedero</h5>
                     <details>
@@ -160,7 +160,7 @@
         </div>
      <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/Bebedero%20conejo.png" class="card-img-top" alt="">
+                <img src="./Imagenes/Bebedero%20conejo.png" class="card-img-top" alt="bebedero">
                 <div class="card-body">
                     <h5 class="card-title">Bebedero</h5>
                     <details>
@@ -174,7 +174,7 @@
         </div>
      <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/heno.png" class="card-img-top" alt="">
+                <img src="./Imagenes/heno.png" class="card-img-top" alt="heno">
                 <div class="card-body">
                     <h5 class="card-title">Forrajera comun</h5>
                     <details>
@@ -188,7 +188,7 @@
         </div>
     <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/forrajera%20inividual.png" class="card-img-top" alt="">
+                <img src="./Imagenes/forrajera%20inividual.png" class="card-img-top" alt="forrajera">
                 <div class="card-body">
                     <h5 class="card-title">Forrajera individual</h5>
                     <details>
@@ -202,7 +202,7 @@
         </div>
         <div class="col">
             <div class="card" style="width: 100%;">
-                <img src="./Imagenes/piedra%20de%20sal%20caprino.png" class="card-img-top" alt="">
+                <img src="./Imagenes/piedra%20de%20sal%20caprino.png" class="card-img-top" alt="piedra">
                 <div class="card-body">
                     <h5 class="card-title">Piedra de sal</h5>
                     <details>
