--- a/Vaca.html
+++ b/Vaca.html
@@ -64,9 +64,8 @@
           <br>
         </div>
       </div>
-
       <div class="col-sm-5">
-        <img class="d-block w-100" src="./Imagenes/pienso-vacas.jpg" alt="Pienso de Engorde">
+        <img class="d-block w-100" src="./Imagenes/pienso-vacas.jpg" alt="Pienso lactante">
       </div>
     </div>
   </div>
@@ -84,7 +83,7 @@
         </div>
       </div>
       <div class="col-sm-5">
-        <img class="d-block w-100" src="./Imagenes/vaca-175.jpg" alt="Pienso de Engorde">
+        <img class="d-block w-100" src="./Imagenes/vaca-175.jpg" alt="Pienso de gestacion">
       </div>
     </div>
   </div>
@@ -102,7 +101,7 @@
         </div>
       </div>
       <div class="col-sm-5">
-        <img class="d-block w-100" src="./Imagenes/vacas.png" alt="Pienso de Engorde">
+        <img class="d-block w-100" src="./Imagenes/vacas.png" alt="Pienso de secado">
       </div>
     </div>
   </div>
@@ -138,7 +137,7 @@
       </div>
 
       <div class="col-sm-5">
-        <img class="d-block w-100" src="./Imagenes/marcadorazul.png" alt="Pienso de Engorde">
+        <img class="d-block w-100" src="./Imagenes/marcadorazul.png" alt="Marcador">
       </div>
     </div>
   </div>
@@ -154,7 +153,7 @@
         </div>
       </div>
       <div class="col-sm-5">
-        <img class="d-block w-100" src="./Imagenes/taco-energy-pienso-terneros-guiralsa%20vaca(1).jpg" alt="Pienso de Engorde">
+        <img class="d-block w-100" src="./Imagenes/taco-energy-pienso-terneros-guiralsa%20vaca(1).jpg" alt="Tacos">
       </div>
     </div>
   </div>
